Test involved orgs with more complex org structure. WIP